version 0.3

version 0.2 - 2003-02-25
* Added INSTALL, README.admin, README.contrib.

version 0.1 - 2003-02-24

* Initial release.
* New s48 libraries: args-fold concurrency continuation-data-type
  krims module-system sequences
* New scsh libraries: afs bytio dir-streams image-info interaction
  pps