@@ -1,4 +1,6 @@
 version 0.3
+* Added DETAILS (autogenerated)
+* Fixed installation
 
 version 0.2 - 2003-02-25
 * Added INSTALL, README.admin, README.contrib.
